--- a/Oefening/views/index.html
+++ b/Oefening/views/index.html
@@ -1,13 +1,9 @@
-<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<link href="/css/terminal.css" rel="stylesheet" />
-<script src="/scipt/jqueryterminal.js"></script>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/jquery.terminal/1.21.0/css/jquery.terminal.min.css"
-    rel="stylesheet" />
 
-<body style="margin:0%" ;>
+
+<body style="margin:10%; background-color: rgb(148, 207, 247);" ;>
     <div class="tv" style="float:left; width: 100%">
         <div id="term" style="display: grid">
-            <pre id="taag_output_text" style="float:left; margin: 0%; width: 100%; height:35%" class="fig"
+            <pre id="taag_output_text" style="float:left; font-size: 30px;" class="fig"
                 contenteditable="true">
 
 
@@ -17,7 +13,7 @@
            /            \
            |             |
            |0     0      |
-           ---X---       |)
+           ===X===       |)
             \---)       / \
              \_________/   \
              /              \
@@ -25,7 +21,7 @@
            / /      | |       )
            \ \      | |        \
            (__)    _|_|_________\      
-          --/\--\_(_______________)
+           ==^==\_(_______________)
             (¨) 
             {_}
              ) 
@@ -38,12 +34,7 @@
                             ex usage: curl http://localhost:1337/skills
             </pre>
         </div>
-        <div class="scanlines" style="width:100%"></div>
     </div>
     <script src="../index.js"></script>
-    <script src="/scipt/terminal.js"></script>
-    <script>
-        $('#term > div.terminal-wrapper > div.terminal-output > div:nth-child(1)').remove();
-        $('#term > div.terminal-wrapper').css('overflow', 'hidden');
-    </script>
+
 </body>
